# sdk-off-chain

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: automated-changelog-pr.yaml  automated-release.yaml  check-version.yaml  publish.yaml
examples/: liquidity.rs  pool.rs  quote.rs  swap.rs  swap_and_check.rs
examples/common/: common.rs
src/: client.rs  core.rs  lib.rs  models.rs
src/client/: grpc_client.rs  service.rs
src/core/: config.rs
src/models/: enums.rs  liquidity.rs  pool.rs  quote.rs  signed_tx.rs  trade.rs  unsigned_tx.rs
src/proto/darklake/integrations/v1/: client.proto
src/proto/darklake/v1/: api.proto
src/proto/validate/: validate.proto
