[package]
name = "darklake-sdk-off-chain"
version = "0.2.0"
edition = "2024"
description = "Darklake SDK for off-chain integrations"
license = "MIT"

[dependencies]
async-trait = "0.1.89"
eyre = "0.6.12"
prost = "0.14.1"
rand = "0.9.2"
regex = "1.11.2"
tokio = { version = "1.47.1", features = ["full", "rt-multi-thread"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

[dev-dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
serde = "1.0.219"
solana-client = "3.0.1"
solana-sdk = "3.0.0"
